overflow and margins fixed on onespot page

--- a/frontend/src/components2/DeleteReviewModal/DeleteReviewForm.css
+++ b/frontend/src/components2/DeleteReviewModal/DeleteReviewForm.css
@@ -28,7 +28,7 @@
     flex-direction: column;
     box-sizing: border-box;
     border-color: black;
-    width: 30em;
+    /* width: 30em; */
 
 }
 
